<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/layout">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:orientation="vertical">


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


            <ImageView
                    android:id="@+id/back"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    app:srcCompat="@drawable/ic_action_name" />

            <TextView
                    android:id="@+id/name_restaurant"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/restaurants"
                    android:textSize="24sp" />

        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorAccent" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/menus"
                android:textSize="15sp" />

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_menu"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/list_item"
                android:textSize="15sp" />

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_item"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorAccent" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/price"
                    android:textSize="24sp" />

            <TextView
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:gravity="end"
                    android:text="@string/prix_base"
                    android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <Button
                    android:id="@+id/button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_drawable"
                    android:fontFamily="Roboto"
                    android:onClick="goToRating"
                    android:text="@string/next"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

            <Button
                    android:id="@+id/button_share"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_drawable"
                    android:fontFamily="Roboto"
                    android:onClick="share"
                    android:text="@string/share"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

</layout>