<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


            <ImageView
                    android:id="@+id/back"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    app:srcCompat="@drawable/ic_action_name" />

            <TextView
                    android:id="@+id/name_restaurant"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/profil"
                    android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:gravity="center"
                android:orientation="vertical">

            <Button
                    android:id="@+id/history_button"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/button_drawable"
                    android:onClick="onClickGoToHistory"
                    android:shadowColor="#3D000000"
                    android:shadowDy="4"
                    android:shadowRadius="10"
                    android:text="@string/history"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

            <Button
                    android:id="@+id/map_button"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/button_drawable"
                    android:onClick="onClickGoToMap"
                    android:shadowColor="#3D000000"
                    android:shadowDy="4"
                    android:shadowRadius="10"
                    android:text="@string/map"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

            <Button
                    android:id="@+id/changePassword"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/button_drawable"
                    android:onClick="onClickGoToChangePassword"
                    android:shadowColor="#3D000000"
                    android:shadowDy="4"
                    android:shadowRadius="10"
                    android:text="@string/changePassword"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

            <Button
                    android:id="@+id/loginButton"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/button_drawable"
                    android:onClick="onClickLogOut"
                    android:shadowColor="#3D000000"
                    android:shadowDy="4"
                    android:shadowRadius="10"
                    android:text="@string/log_out"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

            <Button
                    android:id="@+id/deleteButton"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/button_drawable"
                    android:onClick="onClickDeleteAccount"
                    android:shadowColor="#3D000000"
                    android:shadowDy="4"
                    android:shadowRadius="10"
                    android:text="@string/delete"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>
</layout>