<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layout">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:layout_marginRight="50dp"
                  android:layout_marginLeft="50dp"
                  android:layout_marginTop="75dp">


        <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp" app:srcCompat="@drawable/logo_green" android:id="@+id/imageView2"/>

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="187dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/chef"
                android:id="@+id/imageView"/>

        <LinearLayout
                android:id="@+id/first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/email"
                    android:textColorHint="@android:color/darker_gray">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:nextFocusDown="@id/password"
                        android:textColor="@android:color/darker_gray"
                        android:textCursorDrawable="@null"
                        app:backgroundTint="@android:color/black"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/password"
                    android:textColorHint="@android:color/darker_gray">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:nextFocusDown="@string/passwordConfirm"
                        android:maxLines="1"
                        android:textColor="@android:color/darker_gray"
                        android:textCursorDrawable="@null"
                        app:backgroundTint="@android:color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/passwordConfirm"
                    android:textColorHint="@android:color/darker_gray">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_confirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:imeOptions="actionDone"
                        android:maxLines="1"
                        android:textColor="@android:color/darker_gray"
                        android:textCursorDrawable="@null"
                        app:backgroundTint="@android:color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
                android:id="@+id/second"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="50dp"
                android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/firstname"
                    android:textColorHint="@android:color/darker_gray">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@android:color/darker_gray"
                        android:textCursorDrawable="@null"
                        app:backgroundTint="@android:color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/lastname"
                    android:textColorHint="@android:color/darker_gray">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@android:color/darker_gray"
                        android:textCursorDrawable="@null"
                        app:backgroundTint="@android:color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="invisible"
                    android:hint="@string/lastname"
                    android:textColorHint="@android:color/darker_gray">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@android:color/darker_gray"
                        android:textCursorDrawable="@null"
                        app:backgroundTint="@android:color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
                android:id="@+id/third"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="50dp"
                android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/phonenumber"
                    android:textColorHint="@android:color/darker_gray">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:textColor="@android:color/darker_gray"
                        android:textCursorDrawable="@null"
                        app:backgroundTint="@android:color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/username"
                    android:textColorHint="@android:color/darker_gray">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@android:color/darker_gray"
                        android:textCursorDrawable="@null"
                        app:backgroundTint="@android:color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="invisible"
                    android:hint="@string/lastname"
                    android:textColorHint="@android:color/darker_gray">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@android:color/darker_gray"
                        android:textCursorDrawable="@null"
                        app:backgroundTint="@android:color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
                android:id="@+id/button"
                android:layout_gravity="center"
                android:text="@string/next"
                android:layout_width="200dp"
                android:layout_marginTop="50dp"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:onClick="onClickNext"
                android:background="@drawable/button_drawable"
                android:textSize="20sp" android:fontFamily="Roboto"/>
        <TextView
                android:id="@+id/textView"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/text_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickTextSignIn"/>
    </LinearLayout>
</layout>